# NanoSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: NanoSim.yml
examples/: CMakeLists.txt
examples/GoldParticles/: Au_quench_corediameter_hplc.txt  CMakeLists.txt  EXAMPLE_clean_data.m  EXAMPLE_simulatePSDs.m  GoldParticleSimulation.cpp  simulatePSDs.m  test_opt.m
examples/hybridModel/: CMakeLists.txt  NanoSimJac.m  NanoSimRHS.m  NanoSimSettings.m  runComparison.sh  sparse_concs.txt  sparse_diams.txt  testHybridModel.cpp  testLib.m
lib/: linearAlgebra.h  linearAlgebraEigen.h  linearAlgebraEigenDense.h  linearAlgebraSUNDense.h  linearSolverEigen.h  linearSolverSchurComplement.h  nvectorEigen.h  nvector_eigen_dense.h  odeSolver.h  operationsSUNDenseMatrix.h  particleSystem.h  sunmatrixEigen.h  sunmatrix_eigen_dense.h  testingUtilities.h
tests/: CMakeLists.txt  addAgglomeration.cpp  addAgglomeration01.cpp  addAgglomeration01.output  addAllRxnTypes01.cpp  addAllRxnTypes01.output  addGrowth01.cpp  addGrowth01.output  addNucleation01.cpp  addNucleation01.output  addNucleation02.cpp  addNucleation02.output  addReaction01.cpp  addReaction01.output  addReaction02.cpp  addReaction02.output  addReaction03.cpp  addReaction03.output  defineParticle.output  defineParticle01.cpp  defineParticle01.output  nvector_eigen_dense01.cpp  nvector_eigen_dense02.cpp  nvector_eigen_dense03.cpp  nvector_eigen_dense04.cpp  nvector_eigen_dense05.cpp  nvector_eigen_dense06.cpp  nvector_eigen_dense07.cpp  nvector_eigen_dense08.cpp  nvector_eigen_dense09.cpp  nvector_eigen_dense10.cpp  nvector_eigen_dense11.cpp  nvector_eigen_dense12.cpp  nvector_eigen_dense13.cpp  nvector_eigen_dense14.cpp  nvector_eigen_dense15.cpp  nvector_eigen_dense16.cpp  nvector_eigen_dense17.cpp  nvector_eigen_dense18.cpp  nvector_eigen_dense19.cpp  (+15 more)
tutorial/: CMakeLists.txt  step01-solveRxnODE.cpp  step01_visualize.m  step02-parametrizedRxn.cpp  step02_visualize.m  step03-costFunction.cpp  step03_visualize.m  step04-optimization.cpp  step05-benchmark-script.sh  step05-solveRxnFast.cpp  step05_visualize.m
